Fix various issues
Signed-off-by: Kevin Grigorenko <kevin.grigorenko@us.ibm.com>